test/visibility/only/onlyExceptSameUse.good
onlyExceptSameUse.chpl:13: syntax error: syntax error near 'except'
